Implemented point 7 FR taxes

--- a/README
+++ b/README
@@ -4,7 +4,7 @@
 4) tassa solo italia
 5) sconto manuale
 6) sconto fascia (<1000 > 1000)
-7) tasse in francia [not implemented]
+7) tasse in francia
 
 -- Notes
 
